--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
+    "server:dev": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -28,6 +29,10 @@
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
-    "firebase": "^4.5.0"
+    "body-parser": "^1.18.2",
+    "express": "^4.16.1",
+    "firebase": "^4.5.0",
+    "mongoose": "^4.12.1",
+    "nodemon": "^1.12.1"
   }
 }
