--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^3.1.0",
     "jquery": "^3.1.1",
-    "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.2.2",
     "vinyl-buffer": "^1.0.0",
@@ -32,8 +31,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.1",
     "firebase": "^4.5.0",
+    "jquery": "^3.2.1",
     "mongoose": "^4.12.1",
     "nodemon": "^1.12.1",
-    "react-loading": "^0.1.4"
+    "react": "^15.6.2",
+    "react-star-ratings": "^1.0.20"
   }
 }
